Scroll issues on IOS

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -45,9 +45,14 @@ body {
 .leaflet-control {
   border: none !important;
   border-radius: 0 !important;
-  background-color: #eee;
-  padding: 2px;
+  //background-color: #eee;
+  //padding: 2px;
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12) !important;
+}
+
+.leaflet-control-locate .fa.fa-location-arrow {
+  transform: translate(0,-2px);
+  font-size: 16px;
 }
 
 .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
@@ -55,8 +60,8 @@ body {
 }
 
 .leaflet-control-boxzoom {
-  width: 34px !important;
-  height: 34px !important;
+  //width: 34px !important;
+  //height: 34px !important;
 }
 
 .leaflet-bar a, .leaflet-bar a:hover {
@@ -1783,4 +1788,9 @@ td.rdtYear:hover {
   padding-left: 10px;
   border-left: 1px solid #eee;
 
+}
+
+// hack for IOS
+#alternative-info-container {
+  height: calc(~'100vh + 1px');
 }
